CONTENT-8537 Fixed text overflow issue for long role names

--- a/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/RoleRow/style.less
+++ b/src/Modules/Manage/Dnn.PersonaBar.Roles/Roles.Web/src/components/roles/RoleRow/style.less
@@ -32,6 +32,12 @@
             padding: 15px 18px;
             box-sizing: border-box;
             cursor: auto;
+            .ellipsis {
+                -ms-text-overflow: ellipsis;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                white-space: nowrap;
+            }
             .edit-icon {
                 margin-left: 5px;
                 float: right;
